# rasa-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  compose.yml  config.yml  credentials.yml  domain.yml  endpoints.yml  package-lock.json  pyproject.toml
.github/workflows/: release.yaml  test.yaml
data/: nlu.yml  rules.yml  stories.yml
data/nlu/: antibiotico.yml  curb65.yml  exame.yml  fora_do_escopo.yml  internacao.yml  nlu.yml  pneumonia.yml  sepse.yml
data/rules/: antibiotico_form.yml  curb65_form.yml  menu_inicial.yml  sepse_form.yml
data/stories/: stories.yml
docker/: Rabbitmq.Dockerfile  Rasa.Dockerfile  RasaSdk.Dockerfile  Sdk.Dockerfile
helm-rasa/: Chart.yaml  app-readme.md  values.yaml
helm-rasa/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm-sdk/: Chart.yaml  README.md  app-readme.md  values.yaml
helm-sdk/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
requirements/: rasa.txt
src/actions/: actions.py  utils.py
src/scripts/: upload_model.py
tests/: test_stories.yml
