[tool.poetry]
name = "python-project-template"
version = "1.1.0"
description = "Template for python projects"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
train = "src.scripts.train:train"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.rasa.dependencies]
boto3 = "^1.28.34"
spacy = "^3.6.1"

[tool.poetry.group.sdk.dependencies]

[tool.poetry.group.dev.dependencies]
black = ">=22.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
pytest = "^7.4.0"
poethepoet = "^0.22.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
python-semantic-release = "^8.0.7"
commitizen = "^3.6.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
boto3-stubs = { extras = ["s3"], version = "^1.28.34" }
rasa = "^3.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
targets = ["src"]

[tool.poe.tasks]
setup = ["install:pre-commit", "install:spacy"]
"install:pre-commit" = "pre-commit install"
"install:spacy" = "python -m spacy download pt_core_news_md"
test = "pytest --cov src"
"test:rasa" = "rasa test"
lint = ["lint:fix", "lint:check"]
"lint:check" = ["lint:check:flake8", "lint:check:isort"]
"lint:check:isort" = "isort -c src tests"
"lint:check:flake8" = "flake8 src tests"
"lint:fix" = ["lint:fix:isort", "lint:fix:black"]
"lint:fix:isort" = "isort src tests"
"lint:fix:black" = "black src tests"
sec = ["sec:check"]
"sec:check" = "bandit -c pyproject.toml -r ."
clean = "rm -rf ./**/*.pyc ./**/__pycache__ ./.pytest_cache ./.coverage ./.mypy_cache"
"release:print" = "semantic-release --noop version --print"
commit = "cz commit"
train = ["train:rasa", "train:upload"]
"train:rasa" = "rasa train --fixed-model-name model"
"train:upload" = "python src/scripts/upload_model.py"
"run:rasa" = "rasa run"
"run:rasa:aws" = "rasa run --model model.tar.gz --remote-storage aws"
"run:rasa_sdk" = "rasa run actions --actions src.actions"
requirements = ["requirements:rasa", "requirements:sdk"]
"requirements:rasa" = "poetry export -o requirements/rasa.txt --only rasa"
"requirements:sdk" = "poetry export -o requirements/sdk.txt --only sdk"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "src"]

[tool.isort]
profile = "black"
src_paths = ["tests", "src"]

[tool.semantic_release]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease_token = "rc"
prerelease = true

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
